<resources>
    <string name="app_name">DeviceFinder2</string>
    <string name="title_home">Map</string>
    <string name="title_dashboard">Users</string>
    <string name="title_notifications">Strengths</string>
    <string name="item_test">1</string>
    <string name="enter_new_user">Enter new user</string>
    <string name="mac">MAC:</string>
    <string name="r1">R1:</string>
    <string name="r2">R2:</string>
    <string name="r3">R3:</string>
    <string name="add">Add</string>
    <string name="strength">Strength</string>
</resources>