<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/userInsertFragment">
    
    <TextView
        android:id="@+id/tvEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_user"
        app:layout_constraintBottom_toTopOf="@+id/macInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnInsert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/r3InputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/macInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="149dp"
        app:layout_constraintBottom_toTopOf="@+id/r1InputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnter" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputMac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mac" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/r1InputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="149dp"
        app:layout_constraintBottom_toTopOf="@+id/r2InputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/macInputLayout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputR1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/r1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/r2InputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="149dp"
        app:layout_constraintBottom_toTopOf="@+id/r3InputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r1InputLayout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputR2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/r2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/r3InputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="189dp"
        app:layout_constraintBottom_toTopOf="@+id/btnInsert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r2InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputR3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/r3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult"
        app:srcCompat="@android:drawable/ic_menu_send" />
</androidx.constraintlayout.widget.ConstraintLayout>